--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "WitherTorch.CrossNative"]
-	path = WitherTorch.CrossNative
-	url = https://github.com/WitherTorch/WitherTorch.CrossNative.git
+[submodule "WitherTorch.Common"]
+	path = WitherTorch.Common
+	url = https://github.com/WitherTorch/WitherTorch.Common.git
