--- a/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
+++ b/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
@@ -27,7 +27,7 @@
 
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
 		<Optimize>True</Optimize>
-		<DebugType>Full</DebugType>
+		<DebugType>none</DebugType>
 		<AccelerateBuildsInVisualStudio>false</AccelerateBuildsInVisualStudio>
 		<ProduceReferenceAssembly>false</ProduceReferenceAssembly>
 		<AllowedReferenceRelatedFileExtensions>
