--- a/ConcreteUI.Test/ConcreteUI.Test.csproj
+++ b/ConcreteUI.Test/ConcreteUI.Test.csproj
@@ -41,6 +41,7 @@
 				<LocalsInit />
 				<InlineMethod />
 				<Absence />
+				<Costura />
 			</Weavers>
 		</WeaverConfiguration>
 	</PropertyGroup>
@@ -54,6 +55,10 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+		<PackageReference Include="Costura.Fody" Version="6.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Fody" Version="6.9.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
