--- a/ConcreteUI/ConcreteUI.csproj
+++ b/ConcreteUI/ConcreteUI.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net472;net8-windows</TargetFrameworks>
+		<TargetFrameworks>net8-windows;net472</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
