--- a/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
+++ b/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net472;net8-windows</TargetFrameworks>
+		<TargetFrameworks>net8-windows;net472</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
