--- a/ConcreteUI/ConcreteUI.csproj
+++ b/ConcreteUI/ConcreteUI.csproj
@@ -40,6 +40,7 @@
 				<InlineIL/>
 				<LocalsInit />
 				<InlineMethod />
+				<Absence />
 			</Weavers>
 		</WeaverConfiguration>
 	</PropertyGroup>
