--- a/ConcreteUI/ConcreteUI.csproj
+++ b/ConcreteUI/ConcreteUI.csproj
@@ -70,8 +70,8 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ConcreteUI.Graphics\ConcreteUI.Graphics.csproj" />
-		<ProjectReference Include="..\WitherTorch.Common\WitherTorch.Common.Windows\WitherTorch.Common.Windows.csproj" />
-		<ProjectReference Include="..\WitherTorch.Common\WitherTorch.Common\WitherTorch.Common.csproj" />
+		<ProjectReference Include="$(SolutionDir)\WitherTorch.Common\WitherTorch.Common.Windows\WitherTorch.Common.Windows.csproj" />
+		<ProjectReference Include="$(SolutionDir)\WitherTorch.Common\WitherTorch.Common\WitherTorch.Common.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
