--- a/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
+++ b/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
@@ -67,6 +67,10 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+		<PackageReference Include="Umbani.CompilerServices" Version="1.0.1" />
+	</ItemGroup>
+
 	<ItemGroup>
 	  <ProjectReference Include="$(SolutionDir)\WitherTorch.Common\WitherTorch.Common.Windows\WitherTorch.Common.Windows.csproj" />
 	  <ProjectReference Include="$(SolutionDir)\WitherTorch.Common\WitherTorch.Common\WitherTorch.Common.csproj" />
