--- a/ConcreteUI.Test/ConcreteUI.Test.csproj
+++ b/ConcreteUI.Test/ConcreteUI.Test.csproj
@@ -5,7 +5,7 @@
 		<TargetFrameworks>net8-windows;net472</TargetFrameworks>
 		<GenerateAssemblyInfo>False</GenerateAssemblyInfo>
 		<Nullable>enable</Nullable>
-		<UseWindowsForms>true</UseWindowsForms>
+		<UseWindowsForms>false</UseWindowsForms>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Platforms>AnyCPU;x64;ARM64;x86</Platforms>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
