--- a/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
+++ b/ConcreteUI.Graphics/ConcreteUI.Graphics.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8-windows;net472</TargetFrameworks>
+		<TargetFrameworks>net8;net472</TargetFrameworks>
 		<Nullable>enable</Nullable>
-		<UseWindowsForms>false</UseWindowsForms>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<GenerateAssemblyInfo>False</GenerateAssemblyInfo>
 		<Deterministic>True</Deterministic>
@@ -69,6 +68,9 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8'">
 		<PackageReference Include="System.Drawing.Common" Version="9.0.8" />
 	</ItemGroup>
 
