--- a/ConcreteUI/ConcreteUI.csproj
+++ b/ConcreteUI/ConcreteUI.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8-windows;net472</TargetFrameworks>
+		<TargetFrameworks>net8;net472</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<UseWindowsForms>false</UseWindowsForms>
 		<GenerateAssemblyInfo>False</GenerateAssemblyInfo>
 		<Deterministic>True</Deterministic>
 		<SignAssembly>True</SignAssembly>
@@ -67,14 +66,17 @@
 		<PackageReference Include="LocalsInit.Fody" Version="1.1.0">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.8" />
-		<PackageReference Include="System.Drawing.Common" Version="9.0.8" />
 		<PackageReference Include="PolySharp" Version="1.15.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-
+	
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8'">
+		<PackageReference Include="Microsoft.Win32.SystemEvents" Version="9.0.8" />
+		<PackageReference Include="System.Drawing.Common" Version="9.0.8" />
+	</ItemGroup>
+	
 	<ItemGroup>
 		<ProjectReference Include="..\ConcreteUI.Graphics\ConcreteUI.Graphics.csproj" />
 		<ProjectReference Include="$(SolutionDir)\WitherTorch.Common\WitherTorch.Common.Windows\WitherTorch.Common.Windows.csproj" />
