--- a/ConcreteUI/ConcreteUI.csproj
+++ b/ConcreteUI/ConcreteUI.csproj
@@ -15,6 +15,14 @@
 		<FileAlignment>4096</FileAlignment>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net472'">
+		<PolySharpIncludeRuntimeSupportedAttributes>true</PolySharpIncludeRuntimeSupportedAttributes>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<CompilerVisibleProperty Include="PolySharpIncludeRuntimeSupportedAttributes" />
+	</ItemGroup>
+	
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
 		<Optimize>False</Optimize>
 		<DebugType>pdbonly</DebugType>
